--- a/LMexpress/LMexpress.html
+++ b/LMexpress/LMexpress.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">	 
-  <title>LM express</title>
+  <title>SS</title>
   <meta property="og:url"           content="https://jimboy3100.github.io" />
   <meta property="og:type"          content="Legend mod Express" />
   <meta property="og:title"         content="The Legend mod Project" />
